tests/NormalTests/paczka1/fuzzy1/12731654.err
Error in line 9: i3.q5 A.43 51,4
Error in line 2: i39q5 A943 90,2
Error in line 20: xAQdk A943 48,4
Error in line 1: S624 A91 1,6
Error in line 31: xAQdk S624 25,52
Error in line 11: 1Nkmap A943 27,8
Error in line 34: 1Nkmap S624 64,2
